content overflow on desktop fix

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -12,7 +12,7 @@
     align-content: center;
   }
   .contentBox {
-    width: 80%;
+    width: 70%;
     flex-grow: 1;
   }
 }
