--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -10,7 +10,7 @@
   }
 
   @include while-desktop {
-    margin-right: 7vw;
+    width: 30%;
     position: sticky;
     top: 10vh;
   }
